--- a/files/supervisord.conf
+++ b/files/supervisord.conf
@@ -16,4 +16,8 @@ file=/var/run/supervisor.sock
 chmod=0700
 
 [program:crond]
-command=/usr/sbin/crond -f -l 3
+command=/usr/sbin/crond -f -L 15
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
