Add pull:yes to deploy.yml to have latest container image

--- a/deploy.yml
+++ b/deploy.yml
@@ -28,6 +28,7 @@
       - name: "DEPLOY | Orchestrating Container"
         docker_service:
           state: present
+          pull: yes
           project_name: "manage-windows"
           definition:
             version: '2'
